...
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <array name="build_filters">
        <item>Success</item>
        <item>Failed</item>
        <item>Failed due server error</item>
        <item>Cancelled</item>
        <item>Failed to start</item>
        <item>Running</item>
        <item>Queued</item>
    </array>
</resources>
