...
            android:layout_height="?attr/actionBarSize"
            tools:title="@string/title_filter_builds" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="@dimen/dp_40"
        android:text="@string/text_apply_filters_button"
        app:icon="@drawable/ic_done_24px" />
...

                <include layout="@layout/layout_branch_filter" />

                <include layout="@layout/layout_divider" />

                <LinearLayout
                    android:id="@+id/chooser_filter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/dp_16"
...

                </LinearLayout>

                <include layout="@layout/layout_divider" />

                <Switch
                    android:id="@+id/switcher_is_personal"
                    style="@style/Switch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/text_switcher_for_personal" />

                <include layout="@layout/layout_divider" />

                <Switch
                    android:id="@+id/switcher_is_pinned"
                    style="@style/Switch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/text_switcher_for_pinned" />

                <include
                    android:id="@+id/divider_switcher_is_pinned"
                    layout="@layout/layout_divider" />

                <!--View that makes a view scrollable for low-res devices, to make fab to not overlap the content-->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_96"
...
