...
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/filter_builds"
        android:icon="@drawable/ic_filter_list_white_24px"
        app:showAsAction="always"
        android:title="@string/text_menu_filter_builds" />
</menu>
